# midiVisualizer

./: .gitignore  main.py  main_async.py  main_cpp.py
CppLib/: CMakeLists.txt
CppLib/include/: render_backend.h
CppLib/src/: AsyncRender.cpp  AsyncRender.h  CvFuncs.cpp  CvFuncs.h  MidiPianoRender.cpp  MidiPianoRender.h  NotesRender.cpp  NotesRender.h  ParticleRender.cpp  ParticleRender.h  PianoRender.cpp  PianoRender.h  bindings.cpp
midi/: Asterlore.mid
pyLib/: MidiParser.py
pyLib/RenderBackend/: CvFuncs.py  NotesRender.py  ParticleRender.py  PianoRender.py  Render.py  Render_cpp.py
